--- a/ramdisk/init.lk.rc
+++ b/ramdisk/init.lk.rc
@@ -1,4 +1,4 @@
-##LoonyKernel init
+## LoonyKernel init
 
 on init
     # memory
@@ -13,17 +13,11 @@ on property:sys.boot_completed=1
     # from franciscofranco
     setprop dalvik.vm.heapminfree 2m
 
-    # Prevent mmc from scaling its clk down when performing writes
-    write /sys/class/mmc_host/mmc0/clk_scaling/scale_down_in_low_wr_load 1
-
     # Don't treat storage as rotational
     write /sys/block/mmcblk0/queue/rotational 0
 
     # swappiness
-    write /proc/sys/vm/swappiness 60
-
-    # Entropy
-    write /proc/sys/kernel/random/write_wakeup_threshold 896
+    write /proc/sys/vm/swappiness 20
 
     # disable bcl & core_control to update gov settings
     write /sys/module/msm_thermal/core_control/enabled 0
@@ -44,16 +38,15 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_migration_notif 1
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_sched_load 0
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 1094400
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "90 345600:23 422400:28 499200:33 652800:43 729600:48 844800:55 960000:63 1094400:72 1190400:78 1344000:88 1440000:94 1516800:99"
+    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads 90
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 0
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/boostpulse_duration 0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1651200
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 345600
 
     # LITTLE cluster
     write /sys/devices/system/cpu/cpu4/online 1
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/above_hispeed_delay 20000
+    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/above_hispeed_delay "0 1094400:20000"
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/go_hispeed_load 99
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_slack 160000
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/timer_rate 40000
@@ -61,9 +54,8 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_migration_notif 1
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_sched_load 0
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/hispeed_freq 998400
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads "90 307200:25 403200:33 518400:43 806400:67 883200:73 998400:82 1094400:90 1209600:99"
+    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads 90
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/min_sample_time 20000
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/boostpulse_duration 0
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
 
     # enable bcl & core_control now
@@ -82,20 +74,11 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
 
     # cpu-boost
-    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
     write /sys/module/cpu_boost/parameters/input_boost_frequency "0:844800 4:806400"
-    write /sys/module/cpu_boost/parameters/input_boost_ms 500
-
-    # ksm
-    write /sys/kernel/mm/ksm/run 0
-    write /sys/kernel/mm/ksm/pages_to_scan 256
-    write /sys/kernel/mm/ksm/sleep_millisecs 1000
-    write /sys/kernel/mm/ksm/deferred_timer 0
 
     # lowmemory killer settings
-    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
-    write /sys/module/lowmemorykiller/parameters/minfree "19200,24064,28672,34560,59904,89600"
-    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 99584
+    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 0
+    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 53059
 
     # enable fp to sleep
     write /sys/homebutton/enable 1
@@ -104,14 +87,3 @@ on property:sys.boot_completed=1
     # enable/disable sweep2sleep by flar2
     write /sys/sweep2sleep/sweep2sleep 0
     write /sys/sweep2sleep/vib_strength 42
-
-    # my personal pref for kcal
-    write /sys/devices/platform/kcal_ctrl.0/kcal "236 216 226"
-    write /sys/devices/platform/kcal_ctrl.0/kcal_cont 267
-    write /sys/devices/platform/kcal_ctrl.0/kcal_sat 273
-    write /sys/devices/platform/kcal_ctrl.0/kcal_val 245
-
-    # sound control by flar2 (max 20dB)
-    write /sys/kernel/sound_control/headphone_gain "10 10"
-    write /sys/kernel/sound_control/mic_gain 10
-    write /sys/kernel/sound_control/speaker_gain 10
