--- a/ramdisk/init.lk.rc
+++ b/ramdisk/init.lk.rc
@@ -13,6 +13,8 @@ on property:sys.boot_completed=1
     # from franciscofranco
     setprop dalvik.vm.heapminfree 2m
 
+    write /proc/sys/kernel/sched_boost 0
+
     # Don't treat storage as rotational
     write /sys/block/mmcblk0/queue/rotational 0
 
@@ -40,7 +42,7 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 1094400
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads 90
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 0
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1651200
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1516800
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 345600
 
     # LITTLE cluster
@@ -76,7 +78,7 @@ on property:sys.boot_completed=1
     # cpu-boost
     write /sys/module/cpu_boost/parameters/input_boost_frequency "0:844800 4:806400"
 
-    # lowmemory killer settings
+    # lmk
     write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 0
     write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 53059
 
