--- a/ramdisk/init.lk.rc
+++ b/ramdisk/init.lk.rc
@@ -13,6 +13,9 @@ on property:sys.boot_completed=1
     # from franciscofranco
     setprop dalvik.vm.heapminfree 2m
 
+    setprop sys.io.scheduler "maple"
+
+    # Disable sched-boost
     write /proc/sys/kernel/sched_boost 0
 
     # Don't treat storage as rotational
@@ -70,8 +73,8 @@ on property:sys.boot_completed=1
     # set big cluster properties
     write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 1
     write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 4
-    write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 27
-    write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 18
+    write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 29
+    write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 16
     write /sys/devices/system/cpu/cpu0/core_ctl/offline_delay_ms 100
     write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
 
