--- a/ramdisk/init.lk.rc
+++ b/ramdisk/init.lk.rc
@@ -1,5 +1,10 @@
 ## LoonyKernel init
 
+on early-init
+    # boot with higher frequency, will be reset after boot->spectrum
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1516800
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 1209600
+
 on init
     # memory
     write /proc/sys/vm/dirty_background_ratio 10
