--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -10,13 +10,13 @@ on property:sys.boot_completed=1
    # Enable Spectrum support
    setprop spectrum.support 1
    # Add kernel name
-   setprop persist.spectrum.kernel Electron
+   setprop persist.spectrum.kernel Loony
 
 # Balance (default profile)
 on property:persist.spectrum.profile=0
     # Add configs here
 
-# Performance (based on DrunkSauce Lite)
+# Performance
 on property:persist.spectrum.profile=1
     # Add configs here
 
