--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -16,16 +16,65 @@ on property:sys.boot_completed=1
 
 # Balance (default profile)
 on property:persist.spectrum.profile=0
-    # Add configs here
+   # big cluster
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor loony
+   write /sys/devices/system/cpu/cpu0/cpufreq/loony/above_hispeed_delay "0 1344000:20000"
+   write /sys/devices/system/cpu/cpu0/cpufreq/loony/ignore_hispeed_on_notif 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/loony/use_sched_load 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/loony/io_is_busy 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/loony/hispeed_freq 960000
+   write /sys/devices/system/cpu/cpu0/cpufreq/loony/max_freq_hysteresis 30000
+   write /sys/devices/system/cpu/cpu0/cpufreq/loony/min_sample_time 0
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1516800
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 345600
+   # LITTLE cluster
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor loony
+   write /sys/devices/system/cpu/cpu4/cpufreq/loony/above_hispeed_delay "0 1094400:20000"
+   write /sys/devices/system/cpu/cpu4/cpufreq/loony/ignore_hispeed_on_notif 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/loony/use_sched_load 0
+   write /sys/devices/system/cpu/cpu4/cpufreq/loony/io_is_busy 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/loony/max_freq_hysteresis 0
+   write /sys/devices/system/cpu/cpu4/cpufreq/loony/min_sample_time 20000
+   write /sys/devices/system/cpu/cpu4/cpufreq/loony/hispeed_freq 998400
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
+   # input boost
+   write /sys/module/cpu_boost/parameters/input_boost_enabled 1
+   write /sys/module/cpu_boost/parameters/input_boost_frequency "0:844800 1:844800 2:844800 3:844800 4:806400 5:806400 6:806400 7:806400"
+   # touch boost
+   write /sys/module/msm_performance/parameters/touchboost 0
 
 # Performance
 on property:persist.spectrum.profile=1
-    # Add configs here
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor ondemand
+   # input boost
+   write /sys/module/cpu_boost/parameters/input_boost_enabled 0
+   # touch boost
+   write /sys/module/msm_performance/parameters/touchboost 1
 
 # Battery
 on property:persist.spectrum.profile=2
-    # Add configs here
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor powersave
+   # input boost
+   write /sys/module/cpu_boost/parameters/input_boost_enabled 0
+   # touch boost
+   write /sys/module/msm_performance/parameters/touchboost 0
 
 # Gaming
 on property:persist.spectrum.profile=3
-    # Add configs here
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor performance
+   # input boost
+   write /sys/module/cpu_boost/parameters/input_boost_enabled 0
+   # touch boost
+   write /sys/module/msm_performance/parameters/touchboost 1
