--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -20,26 +20,27 @@ on property:persist.spectrum.profile=0
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor loony
    write /sys/devices/system/cpu/cpu0/cpufreq/loony/above_hispeed_delay "0 1344000:20000"
-   write /sys/devices/system/cpu/cpu0/cpufreq/loony/ignore_hispeed_on_notif 1
    write /sys/devices/system/cpu/cpu0/cpufreq/loony/use_sched_load 0
-   write /sys/devices/system/cpu/cpu0/cpufreq/loony/io_is_busy 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/loony/align_windows 1
+   write /sys/devices/system/cpu/cpu0/cpufreq/loony/max_freq_hysteresis 0
    write /sys/devices/system/cpu/cpu0/cpufreq/loony/hispeed_freq 960000
-   write /sys/devices/system/cpu/cpu0/cpufreq/loony/max_freq_hysteresis 30000
-   write /sys/devices/system/cpu/cpu0/cpufreq/loony/min_sample_time 0
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1516800
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 345600
    # LITTLE cluster
    write /sys/devices/system/cpu/cpu4/online 1
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor loony
    write /sys/devices/system/cpu/cpu4/cpufreq/loony/above_hispeed_delay "0 1094400:20000"
-   write /sys/devices/system/cpu/cpu4/cpufreq/loony/ignore_hispeed_on_notif 1
    write /sys/devices/system/cpu/cpu4/cpufreq/loony/use_sched_load 0
-   write /sys/devices/system/cpu/cpu4/cpufreq/loony/io_is_busy 1
+   write /sys/devices/system/cpu/cpu4/cpufreq/loony/align_windows 1
    write /sys/devices/system/cpu/cpu4/cpufreq/loony/max_freq_hysteresis 0
-   write /sys/devices/system/cpu/cpu4/cpufreq/loony/min_sample_time 20000
    write /sys/devices/system/cpu/cpu4/cpufreq/loony/hispeed_freq 998400
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
+   # GPU
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 500000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 240000000
+   write /sys/module/adreno_idler/parameters/adreno_idler_active 1
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 1
    write /sys/module/cpu_boost/parameters/input_boost_frequency "0:844800 1:844800 2:844800 3:844800 4:806400 5:806400 6:806400 7:806400"
@@ -48,10 +49,21 @@ on property:persist.spectrum.profile=0
 
 # Performance
 on property:persist.spectrum.profile=1
+   # big cluster
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1651200
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 499200
+   # LITTLE cluster
    write /sys/devices/system/cpu/cpu4/online 1
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor ondemand
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 403200
+   # GPU
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 240000000
+   write /sys/module/adreno_idler/parameters/adreno_idler_active 1
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
    # touch boost
@@ -59,10 +71,21 @@ on property:persist.spectrum.profile=1
 
 # Battery
 on property:persist.spectrum.profile=2
+   # big cluster
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1344000
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 345600
+   # LITTLE cluster
    write /sys/devices/system/cpu/cpu4/online 1
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor powersave
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1094400
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
+   # GPU
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor powersave
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 400000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 240000000
+   write /sys/module/adreno_idler/parameters/adreno_idler_active 0
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
    # touch boost
@@ -70,10 +93,21 @@ on property:persist.spectrum.profile=2
 
 # Gaming
 on property:persist.spectrum.profile=3
+   # big cluster
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1651200
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 960000
+   # LITTLE cluster
    write /sys/devices/system/cpu/cpu4/online 1
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor performance
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 883200
+   # GPU
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 465000000
+   write /sys/module/adreno_idler/parameters/adreno_idler_active 0
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
    # touch boost
