--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -38,9 +38,8 @@ on property:persist.spectrum.profile=0
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
-   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 500000000
-   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 240000000
-   write /sys/module/adreno_idler/parameters/adreno_idler_active 1
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 160000000
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 1
    write /sys/module/cpu_boost/parameters/input_boost_frequency "0:844800 1:844800 2:844800 3:844800 4:806400 5:806400 6:806400 7:806400"
@@ -63,7 +62,6 @@ on property:persist.spectrum.profile=1
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 240000000
-   write /sys/module/adreno_idler/parameters/adreno_idler_active 1
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
    # touch boost
@@ -83,9 +81,8 @@ on property:persist.spectrum.profile=2
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor powersave
-   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 400000000
-   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 240000000
-   write /sys/module/adreno_idler/parameters/adreno_idler_active 0
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 465000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 160000000
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
    # touch boost
@@ -97,17 +94,16 @@ on property:persist.spectrum.profile=3
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1651200
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 960000
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1344000
    # LITTLE cluster
    write /sys/devices/system/cpu/cpu4/online 1
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor performance
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
-   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 883200
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 1099400
    # GPU
-   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor performance
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
-   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 465000000
-   write /sys/module/adreno_idler/parameters/adreno_idler_active 0
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 550000000
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
    # touch boost
