--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -16,6 +16,10 @@ on property:sys.boot_completed=1
 
 # Balance (default profile)
 on property:persist.spectrum.profile=0
+   # disable thermal & BCL core_control to update governor settings
+   write /sys/module/msm_thermal/core_control/enabled 0
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 0
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 0
    # big cluster
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor loony
@@ -36,18 +40,32 @@ on property:persist.spectrum.profile=0
    write /sys/devices/system/cpu/cpu4/cpufreq/loony/hispeed_freq 998400
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
+   # enable thermal & BCL core_control now
+   write /sys/module/msm_thermal/core_control/enabled 1
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 12
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 15
+   # set core_ctl parameters
+   write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 1
+   write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 4
+   write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 29
+   write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 14
+   write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
-   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 160000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 200000000
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 1
-   write /sys/module/cpu_boost/parameters/input_boost_frequency "0:844800 1:844800 2:844800 3:844800 4:806400 5:806400 6:806400 7:806400"
+   write /sys/module/cpu_boost/parameters/input_boost_frequency "0:960000 4:883200 5:883200 6:883200 7:883200"
    # touch boost
    write /sys/module/msm_performance/parameters/touchboost 0
 
 # Performance
 on property:persist.spectrum.profile=1
+   # disable thermal & BCL core_control to update governor settings
+   write /sys/module/msm_thermal/core_control/enabled 0
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 0
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 0
    # big cluster
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor ondemand
@@ -58,6 +76,16 @@ on property:persist.spectrum.profile=1
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor ondemand
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 403200
+   # enable thermal & BCL core_control now
+   write /sys/module/msm_thermal/core_control/enabled 1
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 12
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 15
+   # set core_ctl parameters
+   write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 2
+   write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 4
+   write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 22
+   write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 8
+   write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
@@ -69,6 +97,10 @@ on property:persist.spectrum.profile=1
 
 # Battery
 on property:persist.spectrum.profile=2
+   # disable thermal & BCL core_control to update governor settings
+   write /sys/module/msm_thermal/core_control/enabled 0
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 0
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 0
    # big cluster
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
@@ -79,6 +111,16 @@ on property:persist.spectrum.profile=2
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor powersave
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1094400
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 307200
+   # enable thermal & BCL core_control now
+   write /sys/module/msm_thermal/core_control/enabled 1
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 12
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 15
+   # set core_ctl parameters
+   write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 0
+   write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 2
+   write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 36
+   write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 21
+   write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor powersave
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 465000000
@@ -90,6 +132,10 @@ on property:persist.spectrum.profile=2
 
 # Gaming
 on property:persist.spectrum.profile=3
+   # disable thermal & BCL core_control to update governor settings
+   write /sys/module/msm_thermal/core_control/enabled 0
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 0
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 0
    # big cluster
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor performance
@@ -100,6 +146,16 @@ on property:persist.spectrum.profile=3
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor performance
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 1099400
+   # enable thermal & BCL core_control now
+   write /sys/module/msm_thermal/core_control/enabled 1
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 12
+   write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 15
+   # set core_ctl parameters
+   write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 4
+   write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 4
+   write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 0
+   write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 0
+   write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor performance
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
