Add target_freq config for GPU
Signed-off-by: Rohit Vashisht <rohitv88cf@gmail.com>

--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -52,7 +52,8 @@ on property:persist.spectrum.profile=0
    write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
-   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 500000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/target_freq 465000000
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 200000000
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 1
@@ -89,6 +90,7 @@ on property:persist.spectrum.profile=1
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor msm-adreno-tz
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/target_freq 500000000
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 240000000
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
@@ -124,6 +126,7 @@ on property:persist.spectrum.profile=2
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor powersave
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 465000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/target_freq 400000000
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 160000000
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
@@ -159,7 +162,8 @@ on property:persist.spectrum.profile=3
    # GPU
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor performance
    write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq 550000000
-   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 550000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/target_freq 550000000
+   write /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq 500000000
    # input boost
    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
    # touch boost
