--- a/ramdisk/init.lk.rc
+++ b/ramdisk/init.lk.rc
@@ -67,6 +67,8 @@ on property:sys.boot_completed=1
     chmod 0664 /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor
     chown system system /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq
     chmod 0664 /sys/class/devfreq/1c00000.qcom,kgsl-3d0/max_freq
+    chown system system /sys/class/devfreq/1c00000.qcom,kgsl-3d0/target_freq
+    chmod 0664 /sys/class/devfreq/1c00000.qcom,kgsl-3d0/target_freq
     chown system system /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq
     chmod 0664 /sys/class/devfreq/1c00000.qcom,kgsl-3d0/min_freq
     # input boost
