--- a/ramdisk/init.lk.rc
+++ b/ramdisk/init.lk.rc
@@ -2,12 +2,12 @@
 
 on early-init
     # Make sure sys paths have the correct permissions
-    ## big
+    # big
     chown system system /sys/devices/system/cpu/cpu0/online
     chmod 0664 /sys/devices/system/cpu/cpu0/online
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-    ## LITTLE
+    # LITTLE
     chown system system /sys/devices/system/cpu/cpu4/online
     chmod 0664 /sys/devices/system/cpu/cpu4/online
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq
@@ -34,24 +34,20 @@ on property:sys.boot_completed=1
     setprop dalvik.vm.heapminfree 2m
 
     # Make sure all the sys paths have the correct permissions
-    ## big
+    # big
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-    ## LITTLE
+    # LITTLE
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
     chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
     chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
-    # thermal & BCL core_control
+    # core_ctl switch
     chown system system write /sys/module/msm_thermal/core_control/enabled
     chmod 0664 write /sys/module/msm_thermal/core_control/enabled
-    chown system system /sys/devices/soc.0/qcom,bcl.57/hotplug_mask
-    chmod 0664 /sys/devices/soc.0/qcom,bcl.57/hotplug_mask
-    chown system system /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask
-    chmod 0664 /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask
-    # core_ctl params
+    # core_ctl cluster properties
     chown system system /sys/devices/system/cpu/cpu0/core_ctl/min_cpus
     chmod 0664 /sys/devices/system/cpu/cpu0/core_ctl/min_cpus
     chown system system /sys/devices/system/cpu/cpu0/core_ctl/max_cpus
