Disable fp to sleep by default
Remove this personal config of mine as I don't have this device anymore. Users can select whatever they prefer through ex kernel manager or kernel adiutor (init.d)

Signed-off-by: Rohit Vashisht <rohitv88cf@gmail.com>

--- a/ramdisk/init.lk.rc
+++ b/ramdisk/init.lk.rc
@@ -48,7 +48,7 @@ on property:sys.boot_completed=1
 
     # enable fp to sleep
     write /sys/homebutton/enable 1
-    write /sys/homebutton/key 116
+    # write /sys/homebutton/key 116
 
     # enable/disable sweep2sleep by flar2
     write /sys/sweep2sleep/sweep2sleep 1
