update init and spectrum profiles
Signed-off-by: Rohit Vashisht <rohitv88cf@gmail.com>

--- a/ramdisk/init.lk.rc
+++ b/ramdisk/init.lk.rc
@@ -1,55 +1,73 @@
 ## LoonyKernel init
 
-on init
-    # memory
-    write /proc/sys/vm/overcommit_ratio 0
-    write /proc/sys/vm/vfs_cache_pressure 50
-
-## Import spectrum profiles
-import /init.spectrum.rc
-
 on property:sys.boot_completed=1
     # acc. to qcom this improves first launch latencies
     # stock value is 512k
     # from franciscofranco
     setprop dalvik.vm.heapminfree 2m
 
+    # Disable sched-boost
+    write /proc/sys/kernel/sched_boost 0
+
+    # memory parameters
+    write /proc/sys/vm/dirty_background_ratio 10
+    write /proc/sys/vm/dirty_ratio 40
+    write /proc/sys/vm/overcommit_ratio 0
+    write /proc/sys/vm/swappiness 40
+    write /proc/sys/vm/vfs_cache_pressure 50
+    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
+    write /sys/module/lowmemorykiller/parameters/minfree "18432,23040,27648,32256,55296,80640"
+    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 81250
+
+    # disable thermal & BCL core_control to update gov settings
+    write /sys/module/msm_thermal/core_control/enabled 0
+    write /sys/devices/soc.0/qcom,bcl.57/mode "disable"
+    write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 0
+    write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 0
+    write /sys/devices/soc.0/qcom,bcl.57/mode "enable"
+
     # Make sure all the sys paths have the correct permissions
-    # big
+    ## big cluster
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-    # LITTLE
+    ## LITTLE cluster
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
     chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
     chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq
     chown system system /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq
     chmod 0664 /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq
-    # GPU
-    chown system system /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor
-    chmod 0664 /sys/class/devfreq/1c00000.qcom,kgsl-3d0/governor
+    ## GPU
+    chown system system /sys/class/kgsl/kgsl-3d0/devfreq/governor
+    chmod 0664 /sys/class/kgsl/kgsl-3d0/devfreq/governor
+    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 550000000
 
-    # Disable sched-boost
-    write /proc/sys/kernel/sched_boost 0
+    # set cpu frequencies
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1651200
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 499200
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 403200
 
-    # Don't treat storage as rotational
-    write /sys/block/mmcblk0/queue/rotational 0
+    # core control settings
+    write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 2
+    write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 4
+    write /sys/devices/system/cpu/cpu0/core_ctl/offline_delay_ms 100
+    write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
 
-    # swappiness
-    write /proc/sys/vm/swappiness 20
+# Import spectrum profiles
+import /init.spectrum.rc
 
-    # lmk
-    write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 0
-    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 53059
+    # re-enable thermal & BCL core_control now
+    write /sys/module/msm_thermal/core_control/enabled 1
+    write /sys/devices/soc.0/qcom,bcl.57/mode "disable"
+    write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 12
+    write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 15
+    write /sys/devices/soc.0/qcom,bcl.57/mode "enable"
 
-    # enable fp to sleep
-    write /sys/homebutton/enable 1
-    # write /sys/homebutton/key 116
-
-    # enable/disable sweep2sleep by flar2
+    # sweep2sleep by flar2
     write /sys/sweep2sleep/sweep2sleep 1
-    write /sys/sweep2sleep/vib_strength 42
+    
