--- a/ramdisk/init.lk.rc
+++ b/ramdisk/init.lk.rc
@@ -1,5 +1,8 @@
 ## LoonyKernel init
 
+# Import spectrum profiles
+import /init.spectrum.rc
+
 on property:sys.boot_completed=1
     # acc. to qcom this improves first launch latencies
     # stock value is 512k
@@ -24,13 +27,6 @@ on property:sys.boot_completed=1
     write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
     write /sys/module/lowmemorykiller/parameters/minfree "18432,23040,27648,32256,55296,80640"
     write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 81250
-
-    # disable thermal & BCL core_control to update gov settings
-    write /sys/module/msm_thermal/core_control/enabled 0
-    write /sys/devices/soc.0/qcom,bcl.57/mode "disable"
-    write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 0
-    write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 0
-    write /sys/devices/soc.0/qcom,bcl.57/mode "enable"
 
     # Make sure all the sys paths have the correct permissions
     ## big cluster
@@ -58,17 +54,7 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 403200
 
-    # core control settings
-    write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 2
-    write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 4
-    write /sys/devices/system/cpu/cpu0/core_ctl/offline_delay_ms 100
-    write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
-
-# Import spectrum profiles
-import /init.spectrum.rc
-
-    # re-enable thermal & BCL core_control now
-    write /sys/module/msm_thermal/core_control/enabled 1
+    # BCL parameters
     write /sys/devices/soc.0/qcom,bcl.57/mode "disable"
     write /sys/devices/soc.0/qcom,bcl.57/hotplug_mask 12
     write /sys/devices/soc.0/qcom,bcl.57/hotplug_soc_mask 15
