init.spectrum.rc: English on point * Fix typo (comment though)

--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -1,6 +1,6 @@
 # SPECTRUM KERNEL MANAGER
 # Ramdisk file for profile based kernel management
-# Implimentation inspired by Franco's fku profiles
+# Implementation inspired by Franco's fku profiles
 
 # Initialization
 on property:sys.boot_completed=1
